<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="DuplicateDefinition">
    <string name="app_name">MemoMap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">Content</string>

    <!-- Home Page -->
    <string name="greeting_message">Hello, Elsa Binti Tan!</string>
    <string name="quote">Great ideas start with small notes.</string>
    <string name="today_date">20</string>
    <string name="today_day">Monday</string>
    <string name="today_month">JANUARY</string>
    <string name="today_s_line_title">Today\'s Line!</string>
    <string name="today_s_line_spoiler">Mulai minggu depan pikiran berat soal deadline</string>
    <string name="btn_write_now">Write Now</string>

    <string name="your_goals">Your Goals!</string>
    <string name="add_goals_button">addGoalsButton</string>
    <string name="today_s_line">Today\'s Line!</string>
    <string name="input_text_here">Input Text Here</string>
    <string name="save">Save</string>
    <string name="send_goal_button">send_goal_button</string>

    <string name="header_nov">NOV</string>
    <string name="header_dec">DEC</string>
    <string name="header_jan">JAN</string>
    <string name="header_feb">FEB</string>
    <string name="header_mar">MAR</string>
    <string name="btn_previous">btn_previous</string>
    <string name="btn_next">btn_next</string>
    <string name="day">day</string>
    <string name="date">01</string>
    <string name="month">month</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis tellus sem.</string>

    <!-- Home Page for recycler view -->
    <string name="photo_count">%1$d photo</string>
    <string name="photo_count_plural">%1$d photos</string>
    <string name="video_count">%1$d video</string>
    <string name="video_count_plural">%1$d videos</string>
    <string name="btn_calendar">btn_calendar</string>
    <string name="task">Task</string>

    <plurals name="photo_count_plural">
        <item quantity="one">%d photo</item>
        <item quantity="other">%d photos</item>
    </plurals>

    <plurals name="video_count_plural">
        <item quantity="one">%d video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_calendar">Calendar</string>
    <string name="btn_back">btn_back</string>
    <string name="_2023">2023</string>
    <string name="_2024">2024</string>
    <string name="_2025">2025</string>
    <string name="_2026">2026</string>
    <string name="_2027">2027</string>
    <string name="goal">Goal</string>
    <string name="all">All</string>
    <string name="tasks">Tasks</string>
    <string name="goals">Goals</string>
    <string name="done">Done</string>
    <string name="empty_all_goals_message">You haven\'t created a Task or Goals</string>
    <string name="empty_tasks_message">You haven\'t created a Task</string>
    <string name="empty_goals_message">You haven\'t created a Goals</string>
    <string name="empty_done_message">No Goals or Tasks Completed</string>
    <string name="delete_button">Delete Button</string>
    <string name="icon_kapal">icon_kapal</string>
    <string name="icon_pulau">icon_pulau</string>
    <string name="percentage">0%</string>

    <!-- Strings used for activity_one_line -->
    <string name="desc_close_button">Closed</string>
    <string name="hint_one_sentence">one sentence for today</string>
    <string name="desc_attach_file">Attach File</string>
    <string name="desc_emoji">Emoji</string>
    <string name="desc_record_audio">Record Audio</string>
    <string name="desc_photo">Photo placeholder</string>
    <string name="desc_photo2">Photo placeholder 2</string>
    <string name="one_sentence_title">one sentence for today</string>
    <string name="sentence_count_format">%1$d/%2$d</string>
    <string name="audio_time_format">%1$s %2$s</string>
    <string name="audio_time2">03:00  07/12/24</string>
    <string name="audio_q1">Audio Q1</string>
    <string name="foto_dan_video">Foto dan Video</string>
    <string name="tv_question_text">What happened today?</string>
    <string name="save_button_text">Save</string>
    <string name="judul">Nonton Film Longlegs</string>









</resources>