<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/greeting_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting_message"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/greeting_message"/>

        <ImageButton
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/section_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/header_home">

        <androidx.cardview.widget.CardView
            android:id="@+id/date_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/today_line_card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:layout_marginEnd="10dp"
            android:importantForAccessibility="no"
            tools:ignore="MissingContentDescription">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="start"
                android:paddingStart="0dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/today_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_day"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/today_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_date"
                    android:fontFamily="@font/poppins_extrabold"
                    android:textColor="@color/black"
                    android:textSize="40sp"/>

                <TextView
                    android:id="@+id/today_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_month"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:textSize="22sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider_line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintStart_toEndOf="@id/date_information"
            app:layout_constraintEnd_toStartOf="@id/today_line_card"
            app:layout_constraintTop_toTopOf="@id/date_information"
            app:layout_constraintBottom_toBottomOf="@id/date_information"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/today_line_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toEndOf="@id/date_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/today_line_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_s_line_title"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/today_line_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/today_s_line_spoiler"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_write_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/btn_write_now"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/blue"
                    app:cornerRadius="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/section_today">

        <View
            android:id="@+id/top_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/month_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/top_line"
            app:layout_constraintBottom_toTopOf="@id/bottom_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Bulan sebelumnya -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_nov"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_dec"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="6dp"/>

            <!-- Panah kiri -->
            <ImageButton
                android:id="@+id/btn_previous"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/btn_previous"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_previous" />

            <!-- Bulan aktif -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_jan"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- Panah kanan -->
            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/btn_next"
                android:background="@android:color/transparent"
                android:src="@drawable/btn_next" />

            <!-- Bulan setelahnya -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_feb"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:layout_marginHorizontal="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_mar"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:layout_marginHorizontal="6dp"/>
        </LinearLayout>

        <View
            android:id="@+id/bottom_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/month_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/header_content">


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>