<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarHomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_calendar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/btn_previous"
            android:contentDescription="@string/btn_back"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_calendar"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingTop="30dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/header_calendar_home">

        <View
            android:id="@+id/top_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/year_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/top_line"
            app:layout_constraintBottom_toTopOf="@id/bottom_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Tahun sebelumnya -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2023"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginHorizontal="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2024"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginHorizontal="6dp"/>

            <!-- Panah kiri -->
            <ImageButton
                android:id="@+id/btn_previous"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/btn_previous"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_previous" />

            <!-- Tahun aktif -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2025"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!-- Panah kanan -->
            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/btn_next"
                android:background="@android:color/transparent"
                android:src="@drawable/btn_next" />

            <!-- Tahun setelahnya -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2026"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginHorizontal="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2027"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginHorizontal="6dp"/>
        </LinearLayout>

        <View
            android:id="@+id/bottom_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/year_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/header_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_item_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>